# flashcardgpt

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
flashcardgpt/: __init__.py  app.py  gpt.py  questions.py
flashcardgpt/static/: roundup_script.js  script.js  style.css
flashcardgpt/templates/: question.html  roundup.html  url.html
tests/: __init__.py  test_flashcardgpt.py
